--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,8 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.example.projetointegracao.MainApplication</mainClass>
                                 </transformer>
                             </transformers>
