--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
                     <bundler>all</bundler>
                     <needShortcut>true</needShortcut>
                     <bundleArguments>
-                        <icon>${project.basedir}/src/main/deploy/package/windows/ProjetoIntegracao.ico</icon>
+                        <deployDir>${project.basedir}/src/main/deploy</deployDir>
                     </bundleArguments>
                 </configuration>
                 <executions>
